--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app='mean'>
 	<head>
-		<title></title>
+		<title ng-controller='login'>{{ tab }}</title>
 		<meta charset="UTF-8">
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script> 
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<div class="container" ng-view=''>
-
+			<p>ng-views is displayed here</p>
 		</div> <!-- End Container -->
 	</body> 
 </html>
